--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,2 @@
-FROM mcr.microsoft.com/devcontainers/base:ubuntu-24.04
-
-# use this Dockerfile to install additional tools you might need, e.g.
- RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-     && apt-get -y install --no-install-recommends php8.2-cli
+FROM gitpod/workspace-full
+RUN sudo install-packages php-xdebug
